// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StreamingActor Snapshots > indicator states > renders active streaming indicator 1`] = `
"<div class="streaming-indicator active">
          <span class="streaming-dot"></span>
          <span class="streaming-dot"></span>
          <span class="streaming-dot"></span>
        </div>"
`;

exports[`StreamingActor Snapshots > indicator states > renders cleared state after abort 1`] = `
"<div class="streaming-indicator">
          <span class="streaming-dot"></span>
          <span class="streaming-dot"></span>
          <span class="streaming-dot"></span>
        </div>"
`;

exports[`StreamingActor Snapshots > indicator states > renders deactivated indicator after stream ends 1`] = `
"<div class="streaming-indicator">
          <span class="streaming-dot"></span>
          <span class="streaming-dot"></span>
          <span class="streaming-dot"></span>
        </div>"
`;

exports[`StreamingActor Snapshots > indicator states > renders inactive state (no indicator) 1`] = `""`;

exports[`StreamingActor State Snapshots > captures aborted stream state 1`] = `
{
  "active": false,
  "content": "",
  "messageId": null,
  "model": "deepseek-chat",
  "thinking": "",
}
`;

exports[`StreamingActor State Snapshots > captures active streaming state 1`] = `
{
  "active": true,
  "content": "",
  "messageId": "msg-123",
  "model": "deepseek-chat",
  "thinking": "",
}
`;

exports[`StreamingActor State Snapshots > captures completed stream state 1`] = `
{
  "active": false,
  "content": "This is the complete response.",
  "messageId": "msg-789",
  "model": "deepseek-chat",
  "thinking": "",
}
`;

exports[`StreamingActor State Snapshots > captures initial state 1`] = `
{
  "active": false,
  "content": "",
  "messageId": null,
  "model": "deepseek-chat",
  "thinking": "",
}
`;

exports[`StreamingActor State Snapshots > captures state with content 1`] = `
{
  "active": true,
  "content": "Hello, I am an AI assistant.",
  "messageId": "msg-123",
  "model": "deepseek-chat",
  "thinking": "",
}
`;

exports[`StreamingActor State Snapshots > captures state with thinking (reasoner model) 1`] = `
{
  "active": true,
  "content": "The answer is 42.",
  "messageId": "msg-456",
  "model": "deepseek-reasoner",
  "thinking": "Let me analyze this problem step by step...",
}
`;
